# picture-encoder

./: .gitignore  README.md
jpeg/src/: CMakeLists.txt  common.c  common.h  decode_app.c  decoder.c  decoder.h  encode_app.c  encoder.c  encoder.h  unit_test.c
